fixing chat on mobile attempt

--- a/STYLESHEETS/about.css
+++ b/STYLESHEETS/about.css
@@ -229,7 +229,6 @@
   
   .about-page p {
     margin-bottom: 8px;
-    margin-top: 10px;
     font-family: Mondwest Regular;
     font-size:20px;
     padding: 15px;
