--- a/STYLESHEETS/chat.css
+++ b/STYLESHEETS/chat.css
@@ -26,6 +26,17 @@
         display: inline;
     }
 
+    .body {
+      height: 100%;
+      width: 100%;
+      display: inline;
+    }
+
+    .page {
+      height: 90vh;
+      width: 100%;
+    }
+
  /*start of white bar*/
 
  .white-bar {
@@ -230,6 +241,6 @@
     .discord { 
         margin: 10px;
         margin-top: 20px;
-        height: calc(100vh - 20vh);
+        height: 80%
     }
   }
